methods.slug.SlugSnail.scala.error
Compilation error:
SlugSnail:10: error: ':' expected but ')' found.
def isFacingTrail(x):Boolean = {if (estFaceMur()) {return false}; else {avance();var y=getCouleurSol();recule();if(x==y) {return true}; else {return false}}
                   ^SlugSnail:16: error: identifier expected but '}' found.
}
^